Fix styling, spacing, and flexing

--- a/styles.css
+++ b/styles.css
@@ -6,7 +6,9 @@
 .calc-body {
     border: 4px solid lightgray;
     height: 500px;
-    width: 400px;
+    width: 416px;
+    background-color: darkgrey;
+    border-radius: 6px;
 }
 
 .calc-screen {
@@ -16,33 +18,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: stretch;
-}
-
-.num-op-wrapper {
-    display: flex;
-    height: 400px;
-}
-
-.num-grid {
-    display: flex;
-    flex-wrap: wrap;
-    flex-grow: 3;
-}
-
-.op-grid {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 1;
-}
-
-button {
-    height: 100px;
-    width: 100px;
-    flex-grow: 1;
-}
-
-.op-button {
-    flex-shrink: 1;
+    padding: 0px 2px;
+    border-radius: 6px;
 }
 
 .screen-text {
@@ -50,4 +27,35 @@ button {
     font-size: 78px;
     text-align: right;
     color: white;
+}
+
+.num-grid {
+    display: flex;
+    height: 400px;
+    box-sizing: border-box;
+    flex-direction: row;
+    flex-wrap: wrap;
+    align-items: stretch
+}
+
+.num-row {
+    display:flex;
+    flex-direction: column;
+    align-items: stretch;
+    flex-grow: 1;
+}
+
+button {
+    border-radius: 6px;
+    border: none;
+    margin: 2px;
+    flex: 1;
+}
+
+button:hover {
+    background-color: rgb(197, 197, 197);
+}
+
+.op-button {
+    flex-shrink: 1;
 }
